# mlops-dtc-project

./: .gitignore  Dockerfile  docker-compose-prod.yaml  docker-compose.yaml  pyproject.toml
dev/: churn.ipynb
scripts/: entrypoint.sh
src/: transform.py
src/pipeline/: model_evaluate.py  model_train.py  transform.py
src/prefect/: flow.py
terraform/: main.tf  provider.tf  variables.tf
test/: config.py  test_prefect.py  test_transform.py
