[project]
name = "churn-mlops-project"
version = "0.1.0"
description = "End-to-end MLOps pipeline for predicting customer churn using e-commerce transaction data. Includes data processing, model training, evaluation, CI/CD, and deployment."
authors = [
    {name = "Leonel481",email = "leonel.aliaga.v@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "shap (>=0.48.0,<0.49.0)",
    "hyperopt (>=0.2.7,<0.3.0)",
    "setuptools (>=80.9.0,<81.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.4"
ipykernel = "^6.29.5"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"

